# evictor

./: .gitignore  Cargo.toml  README.md  generate-coverage.ps1
evictor/: Cargo.toml  build.rs
evictor-fuzz/: Cargo.toml
evictor-fuzz/fuzz_targets/: fuzz_lfu.rs  lib.rs
evictor/benches/: simple_bench.rs
evictor/examples/: lfu.rs
evictor/src/: lfu.rs  lib.rs  linked_hashmap.rs  lru.rs  mru.rs  queue.rs  random.rs  ref.rs  sieve.rs  utils.rs
evictor/src/linked_hashmap/: arena.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_all.rs  fuzz_lfu.rs  fuzz_sieve.rs  lib.rs
src/: lfu.rs  lib.rs  lru.rs  mru.rs  queue.rs  random.rs  utils.rs
tests/: test_lfu.rs  test_lru.rs  test_mru.rs
