[package]
name        = "evictor"
version     = "0.1.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
description = "A fixed-capacity least-recently-used (LRU) cache"
keywords    = [ "lru", "cache", "eviction", "heap", "data-structures" ]
categories  = [ "caching", "data-structures", "memory-management" ]
repository  = "https://github.com/jesterhearts/evictor"
readme      = "README.md"

[features]
default = [ "ahash" ]
ahash   = [ "dep:ahash" ]

[dependencies]
ahash    = { version = "0.8.12", optional = true }
indexmap = "2.10.0"
