[package]
name        = "evictor"
version     = "0.4.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
description = "A library for generic caching with configurable eviction policies."
keywords    = [ "lru", "cache", "eviction", "heap", "data-structures" ]
categories  = [ "caching", "data-structures", "memory-management" ]
repository  = "https://github.com/jesterhearts/evictor"
readme      = "README.md"

[features]
default = [ "ahash" ]
ahash   = [ "dep:ahash" ]

[dependencies]
ahash    = { version = "0.8.12", default-features = false, features = [ "std", "compile-time-rng" ], optional = true }
indexmap = "2.10.0"
