[package]
name        = "evictor"
version     = "0.5.1"
edition     = "2024"
license     = "MIT OR Apache-2.0"
description = "A library for generic caching with configurable eviction policies."
keywords    = [ "lru", "cache", "eviction", "lfu", "data-structures" ]
categories  = [ "caching", "data-structures", "memory-management" ]
repository  = "https://github.com/jesterhearts/evictor"
readme      = "../README.md"

[features]
default = [ "ahash", "rand" ]
ahash   = [ "dep:ahash" ]
rand    = [ "dep:rand" ]
# Enables **expensive** cache validation checks. You don't want this in production.
internal-debugging = [  ]
# Enables the nightly `doc_auto_cfg` feature.
ENABLE_DOC_AUTO_CFG = [  ]

[dependencies]
ahash    = { version = "0.8.12", default-features = false, features = [ "std", "compile-time-rng" ], optional = true }
indexmap = "2.10.0"
rand     = { version = "0.9.2", optional = true }

[build-dependencies]
rustc_version = "0.4.1"

[package.metadata.docs.rs]
all-features = true
