[package]
name         = "evictor"
version      = "0.5.2"
edition      = "2024"
rust-version = "1.88.0"
license      = "MIT OR Apache-2.0"
description  = "A library for generic caching with configurable eviction policies."
keywords     = [ "lru", "cache", "eviction", "lfu", "data-structures" ]
categories   = [ "caching", "data-structures", "memory-management" ]
repository   = "https://github.com/jesterhearts/evictor"
readme       = "../README.md"

[features]
default    = [ "ahash", "rand" ]
ahash      = [ "dep:ahash" ]
rand       = [ "dep:rand" ]
statistics = [  ]
# Enables **potentially expensive** cache validation checks. You don't want this in production.
internal-debugging = [  ]
# Enables the nightly `doc_auto_cfg` feature.
ENABLE_DOC_AUTO_CFG = [  ]

[dependencies]
ahash      = { version = "0.8.12", default-features = false, features = [ "std", "compile-time-rng" ], optional = true }
rand       = { version = "0.9.2", optional = true }
indexmap   = "2.11.0"
tether-map = "0.1.0"

[dev-dependencies]
ntest     = "0.9.3"
criterion = "0.7.0"

[[bench]]
name    = "simple_bench"
harness = false

[build-dependencies]
rustc_version = "0.4.1"

[package.metadata.docs.rs]
all-features = true
