[package]
name         = "evictor"
version      = "0.7.0"
edition      = "2024"
rust-version = "1.88.0"
description  = "A library for generic caching with configurable eviction policies."
readme       = "../README.md"
repository   = "https://github.com/jesterhearts/evictor"
license      = "MIT OR Apache-2.0"
keywords     = ["cache", "data-structures", "eviction", "lfu", "lru"]
categories   = ["caching", "data-structures", "memory-management"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
harness = false
name    = "simple_bench"

[dependencies]
ahash      = { version = "0.8.12", default-features = false, features = [
  "compile-time-rng",
  "std"
], optional = true }
indexmap   = "2.11.0"
rand       = { version = "0.10.1", optional = true }
tether-map = "0.2.0"

[dev-dependencies]
criterion = "0.8.2"
ntest     = "0.9.3"

[build-dependencies]
rustc_version = "0.4.1"

[features]
default             = ["ahash", "rand"]
# Enables the nightly `doc_auto_cfg` feature.
ENABLE_DOC_AUTO_CFG = []
ahash               = ["dep:ahash"]
# Enables **potentially expensive** cache validation checks. You don't want this in production.
internal-debugging  = []
rand                = ["dep:rand"]
statistics          = []
