[package]
name    = "fuzz"
version = "0.1.0"
publish = false
edition = "2024"
readme  = "../README.md"

[profile.release]
debug = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
arbitrary     = { version = "1.4.2", features = [ "derive" ] }

[dependencies.evictor]
path     = "../evictor"
features = [ "internal-debugging" ]

[lib]
name = "fuzz_lib"
path = "fuzz_targets/lib.rs"

[[bin]]
name  = "fuzz_lfu"
path  = "fuzz_targets/fuzz_lfu.rs"
test  = false
doc   = false
bench = false

[[bin]]
name  = "fuzz_sieve"
path  = "fuzz_targets/fuzz_sieve.rs"
test  = false
doc   = false
bench = false
